# notebooks

./: pyproject.toml
numpy_basic/: test_basic.ipynb  test_random.ipynb
statistics/: map.ipynb  mcmc_gibbs.ipynb  mcmc_randomwalk_mh.ipynb
